<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/dashboardFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_dashboard"/>
    <item
        android:id="@+id/categoriesFragment"
        android:icon="@drawable/ic_category"
        android:title="@string/nav_categories"/>
    <item
        android:id="@+id/reportsFragment"
        android:icon="@drawable/ic_chart"
        android:title="@string/nav_reports"/>
    <item
        android:id="@+id/gamificationFragment"
        android:icon="@drawable/ic_trophy"
        android:title="@string/nav_rewards"/>
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings"/>
</menu>
